--- a/labs/lab6/css/styles.css
+++ b/labs/lab6/css/styles.css
@@ -1,13 +1,4 @@
 
-div {
-    margin: 0 auto;
+h1,form{
     text-align: center;
-    border: solid;
-    border-radius: 4px;
-    border-color: #275399;
-}
-
-input {
-    
-    color: #275399;
 }
